--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,17 +12,14 @@
   preview={brownian-motion.gif}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{metahumans,
+  abbr={MH},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  title={Historic Metahumans},
+  author={Jack Andolina, Joseph Dang, Sophia Boss, Jialin Chen, Joseph Teh, Raj Sunku, Kevin Chan, Giovanni Vindiola, Thomas Levy, Neil Smith},
+  journal={American Society of Overseas Research},
+  year={2023},
+  publisher={Chicago, IL}
 }
 
 @article{PhysRev.47.777,
